--- a/src/main/resources/templates/carOverview.html
+++ b/src/main/resources/templates/carOverview.html
@@ -28,9 +28,9 @@
         <h1>Oversigt over Biler</h1>
         <p>Herunder ser du alle biler, inklusive udlejede og dem, der kræver skadesrapport.</p>
         <div class="filter-buttons">
-            <button onclick="setActiveFilter(this, 'all')">Alle</button>
-            <button onclick="setActiveFilter(this, 'rented')">Udlejede</button>
-            <button onclick="setActiveFilter(this, 'needs-report')">Mangler skadesrapport</button>
+            <button class="btn-link" onclick="setActiveFilter(this, 'all')">Alle</button>
+            <button class="btn-link" onclick="setActiveFilter(this, 'rented')">Udlejede</button>
+            <button class="btn-link" onclick="setActiveFilter(this, 'needs-report')">Mangler skadesrapport</button>
         </div>
     </section>
 
