bk button fixed

--- a/src/main/resources/templates/employeeEdit.html
+++ b/src/main/resources/templates/employeeEdit.html
@@ -15,7 +15,7 @@
     <h3>Medarbejderportal</h3>
     <nav>
 
-      <a th:href="@{/dashboard}" class="back-btn">Tilbage</a>
+      <a th:href="@{/employeeOverview.html}" class="back-btn">Tilbage</a>
       <a th:href="@{/employeeEdit.html}" class="back-btn">Log ud</a>
     </nav>
   </div>
