--- a/src/main/resources/templates/employeeDetails.html
+++ b/src/main/resources/templates/employeeDetails.html
@@ -16,7 +16,7 @@
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
-            <a th:href="@{/dashboard}" class="back-btn">Tilbage</a>
+            <a th:href="@{/employeeOverview.html}" class="back-btn">Tilbage</a>
             <a th:href="@{/employeeEdit.html}" class="back-btn">Log ud</a>
         </nav>
     </div>
