--- a/src/main/resources/templates/damageReportHistory.html
+++ b/src/main/resources/templates/damageReportHistory.html
@@ -32,6 +32,7 @@
                         <th>Stelnummer</th>
                         <th>Registreringsnummer</th>
                         <th>Kunde</th>
+                        <th>Antal skader</th>
                         <th>Se rapport</th>
                     </tr>
                     </thead>
@@ -41,6 +42,7 @@
                         <td th:text="${report.car.chassisNumber}">Stelnummer</td>
                         <td th:text="${report.car.licensePlate}">Nummerplade</td>
                         <td th:text="${report.customerEmail}">Kunde</td>
+                        <td th:text="${#arrays.length(report.reports)}">Antal skader</td>
                         <td><a th:href="@{'/damageReportDone/' + ${report.car.carId}}" class="btn-link">Vis</a></td>
                     </tr>
                     </tbody>
