--- a/src/main/resources/templates/damageReportHistory.html
+++ b/src/main/resources/templates/damageReportHistory.html
@@ -23,7 +23,7 @@
     </section>
 
     <main class="main-content">
-        <section class="dashboard">
+        <section class="search-dashboard">
             <div class="report-list">
                 <table class="styled-table">
                     <thead>
